* set fields to required?  By org.
* configurable start page, like start on dashboard
* relationships in print?
* Documentation improvements:

workflow.cs
ldap
blog about lucene.net


-----------------------------------------------------------------------
Version 3.0.8   01/xx/2009   (svn revision ???)
-----------------------------------------------------------------------

* Exporting a list of bugs to excel now handles line breaks better, 
thanks to Michael Wilson.

* No longer using the "Sessions" table in the database.  Years ago, I
wanted BugTracker.NET to avoid using the ASP.NET Session object, to be
more compatible with web farms, but for a long time now BugTracker.NET
has been dependent on the Session object, so no point in keeping the
Sessions table.

-----------------------------------------------------------------------
Version 3.0.7   01/10/2009   (svn revision 292)
-----------------------------------------------------------------------

Minor bug fixes.

 * Fixed bug 2477163 "Cannot view or edit tasks/time even though admin"
 
 * Fixed bug 2494633 "Bug updated even if unchanged if field 
 permission view only"
 
 * Fixed bug with validation of decimal format custom fields.  The
 logic was allowing too many digits to the left of the decimal, leading
 to an overflow error.
 
 * Fixed bug with page for retrieving a forgotten password, when two
 users have the same email address.
 
 * Made changes that might make BugTracker.NET more compatible with
 new IIS "Integrated Pipeline", but I'm not sure (because I don't have
 II7 to test with...)
 
 * Added RFE 2490904 "Display position in list edit_bug.aspx, near 
 prev/next"
  
-----------------------------------------------------------------------
Version 3.0.6   12/22/2008 
-----------------------------------------------------------------------

To upgrade to this release, make the following changes to your
Web.config file:

1) Delete the line in your web config that begins like this: