@@ -646,7 +646,7 @@ function select_addrs(sel)
 	{
 		addr_target.value += ",";
 	}
-	addr_target.value += sel.options[sel.selectedIndex].text
+	addr_target.value += sel.options[sel.selectedIndex].value
 }
 
 function findPosX(obj)
@@ -798,59 +798,26 @@ function findPosY(obj)
 	<select id=addrs_select size=6 onchange="select_addrs(this)">
 	<%
 
-	// fill re-assign dropdown
-	if (project > -1)
+
+	DataTable dt_related_users = btnet.Util.get_related_users(security);
+	// let's sort by email
+	DataView dv_related_users = new DataView(dt_related_users);
+	dv_related_users.Sort = "us_email";
+	
+	foreach (DataRowView drv_email in dv_related_users)
 	{
-		if (project == 0)
+		if ((string)drv_email["us_email"] != "")
 		{
-
-			sql = @"select us_email
-				from users
-				where us_active = 1
-				and len(us_email) > 0
-				order by us_email";
-
+			Response.Write("<option value='");
+			Response.Write(drv_email["us_email"]);
+			Response.Write("'>");
+			Response.Write(drv_email["us_email"]);
+			Response.Write("  (");
+			Response.Write(drv_email["us_username"]);
+			Response.Write(")</option>");
 		}
-		else
-		{
-			// Only users explicitly allowed will be listed
-			if (btnet.Util.get_setting("DefaultPermissionLevel","2") == "0")
-			{
-				sql = @"select us_email
-					from users
-					where us_active = 1
-					and len(us_email) > 0
-					and us_id in
-						(select pu_user from project_user_xref
-						where pu_project = $pr
-						and pu_permission_level <> 0)
-					order by us_email";
-			}
-			// Only users explictly DISallowed will be omitted
-			else
-			{
-				sql = @"select us_email
-					from users
-					where us_active = 1
-					and len(us_email) > 0
-					and us_id not in
-						(select pu_user from project_user_xref
-						where pu_project = $pr
-						and pu_permission_level = 0)
-					order by us_email";
-			}
-		}
-
-		sql = sql.Replace("$pr", Convert.ToString(project));
-		DataSet ds_emails = btnet.DbUtil.get_dataset(sql);
-		foreach (DataRow dr_email in ds_emails.Tables[0].Rows)
-		{
-			Response.Write("<option>");
-			Response.Write(dr_email["us_email"]);
-			Response.Write("</option>");
-		}
-
 	}
+
 
 	%>
 
